# aws-sqs-persist-lambda

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  container.mk
include/: api.h  dynamodb.h  sqs.h
src/: consumer.h  main.cc
